fixed wrong field alignment for Center's addition pop-up first page

--- a/src/components/addCenter/css/AddCenter.css
+++ b/src/components/addCenter/css/AddCenter.css
@@ -8,6 +8,10 @@
     border-radius: 16px;
 }
 
+.addCenter .side-mobile {
+    display: none;
+}
+
 .addCenter .add-center-container {
     padding: 20px 40px 32px 24px;
     flex-direction: column;
