--- a/src/components/addClub/css/AddClubSider.css
+++ b/src/components/addClub/css/AddClubSider.css
@@ -5,7 +5,7 @@
     min-height: 600px;
 }
 
-.modal-add-club .add-club-sider-mobile {
+.modal-add-club .side-mobile {
     display: none;
 }
 
